src/sass/components/_PlanetInfoLink.scss
.planet-info-link {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-size: 2rem;
  padding: 0rem 3rem;
  overflow: auto;

  &::-webkit-scrollbar {
    width: 1rem;
  }
  &::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(48, 47, 47, 0.404);
  }
  &::-webkit-scrollbar-thumb {
    background-color: $line-color;
    outline: 1px solid lighten($line-color, 50%);
  }
}

.planet-list {
  list-style-type: none;
  padding-inline-start: 0%;
  @media only screen and (max-width: 600px) {
    padding: 0rem 1rem;
    display: flex;
    flex-direction: column;
  }

  li {
    display: flex;
    align-items: center;
    margin-top: 1rem;
    transition: all 0.2s ease;
    cursor: pointer;
    @media only screen and (max-width: 600px) {
      margin: 0 0.5rem 0 0;
    }

    &:hover {
      transform: scale(1.1);
      text-shadow: 0px 0px 7px white;
    }
    img {
      margin-right: 2rem;
      width: 3rem;
      height: 3rem;
    }
  }
}

